[TECH] Run/deploy application using spring profiles
